--- a/views/index.erb
+++ b/views/index.erb
@@ -18,29 +18,28 @@
     <h2>Messages</h2>
     <ol class="message-list">
       <% messages.each do |message| %>
-        <% if message.shown == 0 then %>
+        <% if message.shown == 0 %>
         <li>
           <div class="message-body">
             <%= message.body %>
           </div>
           <div class="message-timestamp">
-            Posted on <%= message.created_at.strftime("%B %d, %Y at %l:%M%p") %>
+            Posted on <%= message.created_at.strftime("%B %d, %Y at %l:%M%p %:z") %>
           </div>
           <div class="message-actions">
-              <form action="/messages/<%= message.id %>/upvote" method="POST">
-                <strong>Upvotes: <%= message.upvotes %></strong>
-                <button type="submit">&#8593;</button>
-              </form>
-              
-              <form action="/messages/<%= message.id %>/downvote" method="POST">
-                <strong>Downvotes: <%=message.downvotes%></strong>
-                <button type="submit">&#8595;</button>
-              </form>
-          </div>
-          <div class="message-actions">
-              <form action="/messages/ <%= message.id %>/delete" method="POST">
-                <button type="delete">Delete</strong>
-              </form>
+            <form action="/messages/<%= message.id %>/upvote" method="POST">
+              <strong>Upvotes: <%= message.upvotes %></strong>
+              <button type="submit">&#8593;</button>
+            </form>
+            
+            <form action="/messages/<%= message.id %>/downvote" method="POST">
+              <strong>Downvotes: <%=message.downvotes%></strong>
+              <button type="submit">&#8595;</button>
+            </form>
+            
+            <form action="/messages/<%= message.id %>/delete" method="POST">
+              <button type="submit">Delete</button>
+            </form>
           </div>
           </br>
         </li>
